# whisper.cpp

ggml/: CMakeLists.txt
ggml/include/: ggml-remoting-frontend.h
ggml/src/: ggml-backend-reg.cpp
ggml/src/ggml-remotingbackend/: CMakeLists.txt  backend-convert.h  backend-dispatched-backend.cpp  backend-dispatched-buffer-type.cpp  backend-dispatched-buffer.cpp  backend-dispatched-device.cpp  backend-dispatched.cpp  backend-dispatched.h  backend-internal.h  backend-utils.h  backend.cpp  venus_cs_ggml-rpc-back.cpp
ggml/src/ggml-remotingbackend/shared/: api_remoting.h  apir_backend.h  venus_cs.h  venus_cs_ggml-rpc.cpp  venus_cs_ggml-rpc.h  venus_cs_ggml.h
ggml/src/ggml-remotingfrontend/: CMakeLists.txt  ggml-backend-buffer-type.cpp  ggml-backend-buffer.cpp  ggml-backend-device.cpp  ggml-backend-host-buffer-type.cpp  ggml-backend-reg.cpp  ggml-backend.cpp  ggml-remoting-frontend.cpp  ggml-remoting.h  venus_cs_ggml-rpc-front.cpp  virtgpu-forward-backend.cpp  virtgpu-forward-buffer-type.cpp  virtgpu-forward-buffer.cpp  virtgpu-forward-device.cpp  virtgpu-forward-impl.h  virtgpu-forward.h  virtgpu-shm.cpp  virtgpu-shm.h  virtgpu-utils.cpp  virtgpu-utils.h  virtgpu.cpp  virtgpu.h
